SERVER-56561 Release critical section only if the DDL coordinator managed to take the distributed lock